Make sure the app looks good on mobile first, then desktop.#1

--- a/css/layout.css
+++ b/css/layout.css
@@ -12,8 +12,6 @@
 }
 header{
   text-align: center;
-  background-color: #4A6FA5;
-  color: white;
 }
 h1{
   font-family: 'Lobster', sans-serif;
@@ -33,4 +31,14 @@ main{
 button{
   width: 30%;
   margin: auto;
+}
+
+@media only screen and (max-width: 768px){
+  button{
+    width: 50%;
+  }
+  .form-section{
+    margin-top: 1.5rem;
+    width: 50%;
+  }
 }
